# onui

./: .gitignore  Cargo.toml  GUIDE.CONFIG.md  README.md
src/: agent.rs  cli.rs  config.rs  consts.rs  llm_openai.rs  lua.rs  main.rs
src/io/: cli.rs  mod.rs  msg.rs  tcp.rs
src/llm/: lua_call.rs  mod.rs  openai.rs  traits.rs
